--- a/entry7/style.css
+++ b/entry7/style.css
@@ -106,16 +106,16 @@ h3{
     margin-bottom: 30px;
 }
 
-.row {
+.row{
     display: flex;
     margin: 20px;
     margin-bottom: 10px;
 }
 
-.column, image {
-    flex: 50%;
+.column {
+    flex: 20%;
     padding: 5px;
-    max-height: 100px;
+    max-height: 350px;
 }
 
 a{
