--- a/entry9/style.css
+++ b/entry9/style.css
@@ -7,7 +7,7 @@ h1 {
 
 .date{
     margin: 30px;
-    font-size: 54px;
+    margin-left: 54px;
 }
 
 hr.dotted {
@@ -31,7 +31,7 @@ h2{
     padding: 20px;
     margin: 30px;
     align-content: center;
-    line-height: 50px;
+    line-height: 85px;
     kerning: 110%;
 }
 
@@ -42,10 +42,29 @@ body{
     color: lightgoldenrodyellow; 
 }
 
-p{
-    font-size: 45px;
-    margin-inline: 50px;
+.intro{
     line-height: 35px;
+    font-size: 30px;
+    margin-inline: 50px;
+}
+
+#top-button {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 25px;
+    border: none;
+    outline: none;
+    background-color:#405e00;
+    color:#fffad1;
+    padding: 15px;
+    border-radius: 4px;
+}
+  
+#top-button:hover {
+    background-color: rgba(245, 245, 245, 0.506);
 }
 
 .boba-wiki{
@@ -59,7 +78,6 @@ p{
     margin-top: 8px;
     padding: 8px;
     padding-bottom: 0px;
-    font-size: 50px;
 }
 
 ul, .elements-intro{
@@ -68,7 +86,7 @@ ul, .elements-intro{
     padding-left: 25px;
     color:rgb(100, 117, 68);
     background-color:#ffeebb;
-    font-size: 45px;
+    font-size: 40px;
     line-height: 40px;
 }
 
@@ -101,21 +119,25 @@ h3{
     font-size: 30px;
     margin-inline: 45px;
     padding: 40px;
-    line-height: 30px;
     color:aliceblue;
     margin-bottom: 30px;
+    line-height: 47px;
 }
 
 .row{
     display: flex;
-    margin: 20px;
+    margin: 30px;
     margin-bottom: 10px;
+    padding-top: 10px;
 }
 
 .column {
-    flex: 20%;
     padding: 5px;
-    max-height: 350px;
+    max-height: 450px;
+    flex: 33.3%;
+    width: 100%;
+    margin-inline: 10px;
+    font-size: 20px;
 }
 
 a{
@@ -146,6 +168,7 @@ footer {
     background-color:#9b2f01;
     color: white;
     text-align: center;
+    font-size: 25px;
 }
 
 @media (min-width: 0px) {
