--- a/entry11/css/style.css
+++ b/entry11/css/style.css
@@ -8,6 +8,10 @@ body {
   position: relative;
 }
 
+p{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 html,body {
   width: 100%;
   overflow-x: hidden;
@@ -21,7 +25,7 @@ h1 {
   margin-left: 3px;
   font-size: 100px;
   color:#fffad1;
-  margin-top: 4px;
+  margin-top: 15px;
 }
 
 h2 {
@@ -31,16 +35,16 @@ h2 {
 }
 
 h3{
-  font-weight: 330;
+  font-weight: 400;
   text-align: center;
   font-size: 40px;
-
 }
 
 .date{
-  margin: 30px;
-  margin-left: 54px;
+  margin: 20px;
+  margin-left: 92px;
   color:#fffad1;
+  font-size: 80 px;
 }
 
 hr.dotted {
@@ -80,10 +84,10 @@ img {
 }
 
 .caption-text{
-  color: #c03a00e6;
+  color: #95350ce6;
   font-size: 30px;
   text-align: center;
-  font-weight: 320;
+  font-weight: 350;
 }
 
 .text{
@@ -96,11 +100,14 @@ img {
 .interviewer{
   text-align: left;
   color: lightgoldenrodyellow;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
 .interviewed{
   text-align: right;
-
+  margin-bottom: 6 rem;
+  padding-bottom: 20 rem;
 }
 
 /* preloader styles
@@ -167,10 +174,6 @@ img {
   background-color: rgba(245, 245, 245, 0.506);
 }
 
-nav a {
-  color: #333333;
-}
-
 .navbar {
   background: transparent;
   height: 94px;
@@ -180,6 +183,7 @@ nav a {
   transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
+  font-size: 24px;
 }
 
 .brand {
@@ -188,16 +192,10 @@ nav a {
   transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
-  text-transform: uppercase;
   letter-spacing: 0.3rem;
 }
-.brand a {
-  color: #333;
-  font-size: 24px;
-  font-weight: 700;
-  opacity: 1;
-  text-decoration: none;
-}
+
+
 
 .sticky nav.nav-inner .navbar {
   height: 70px;
@@ -250,60 +248,7 @@ a.icon {
   }
 }
 
-/* Portfolio section styles
-/* ========================================== */
-#portfolio {
-  text-align: center;
-  padding-top: 3rem;
-  padding-bottom: 6rem;
-}
 
-#portfolio img {
-  width: 100%;
-}
-
-#portfolio .portfolio-thumb {
-  position: relative;
-  overflow: hidden;
-  margin: 0;
-} 
-
-#portfolio .portfolio-thumb .portfolio-overlay {
-  background: #141414;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  -webkit-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
-}
-
-#portfolio .portfolio-thumb:hover .portfolio-overlay {
-  opacity: 0.9;
-}
-
-#portfolio .portfolio-thumb .portfolio-overlay .portfolio-item {
-    text-align: center;
-    padding: 30% 20px 20px;
-}
-
-#portfolio .portfolio-thumb .portfolio-overlay .fa {
-    background: #f9f9f9;
-    border-radius: 100px;
-    color: #141414;
-    font-size: 1.3rem;
-    display: inline-block;
-    width: 3.5rem;
-    height: 3.5rem;
-    line-height: 3.5rem;
-    text-align: center;
-    text-decoration: none;
-    margin-bottom: 4px;
-}
 
 /*filter css*/
 .filter-wrapper {
@@ -352,9 +297,10 @@ footer {
   text-align: center;
 }
 
-.boba-marquee{
-  max-width: 100%;
+marquee {
   color:moccasin;
+  font-size: 16px;
+  max-width: 100%;
 }
 
 /* social icon */
@@ -366,7 +312,12 @@ footer {
   list-style: none;
   display: inline-block;
 }
-.social-icon li a, li a {
+
+footer, li{
+  font-size: 18px;
+}
+
+li a {
   border-radius: 100px;
   border: 1px solid transparent;
   color: white;
@@ -379,7 +330,7 @@ footer {
   text-decoration: none;
   transition: all 0.4s ease-in-out;
   padding: 0px;
-  margin-top: 14px;
+  margin-top: 10px;
   margin-right: 8px;
   margin-left: 8px;
   position: relative;
